--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -8,5 +8,6 @@
   it google wil give you hint on this for now this is a basic implementation
 -->
 <%= form_for @document do |f| %>
+  <%= f.text_field :name %>
   <%= f.submit %>
 <% end %>
